Fix github page image not showing

--- a/about.css
+++ b/about.css
@@ -30,7 +30,7 @@ a {
   font-family: 'Lato', sans-serif;
   width: 100%;
   min-height: 100vh;
-  background: url('/assets/images/header.jpg');
+  background: url('assets/images/header.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -90,7 +90,7 @@ header .text {
   }
 
   body .show-case {
-    background: url('/assets/images/tokyo.jpg');
+    background: url('assets/images/tokyo.jpg');
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
